--- a/podstrony/stopka_Marek..html
+++ b/podstrony/stopka_Marek..html
@@ -4,6 +4,8 @@
 			<meta charset="utf-8">
 		</head>
 		<body>
-		
+            <h1 align="center">Stopka - Dziamyanchyk</h1>
+            <marquee bgcolor="green">Dziamyanchyk</marquee>
+            <h2 align="center">Gdańsk 02.02.2023
 		</body>
 	</html>
