--- a/podstrony/right_menu.html
+++ b/podstrony/right_menu.html
@@ -6,12 +6,12 @@
 		</head>
 		<body>
 			<map id="mapa_Marek">
-<area shape="rect" coords="29,69,46,25,64,68" href="logo_Marek.png">
-<area shape="poly" coords="46,108,20" href="https://ptskiller.github.io/2k/podstrony/tabela_Dziamyanchyk.html" target="obszar_glowny">
-<area shape="circle" coords="47,166,19" href="https://ptskiller.github.io/2k/podstrony/formulasz_Dziamyanchyk.html" target="obszar_glowny">
-<area shape="rect" coords="25,202,73,234" href="mailto:mkryniew@ids.gda.pl">
-<area shape="circle" coords="23,251,75,281" href="https://github.com/ptskiller/css" target="obszar_glowny">
+<area shape="rect" coords="14,22,85,53" href="../media/logo_Marek.png">
+<area shape="poly" coords="25,111,52,66,71,111" href="https://ptskiller.github.io/2k/podstrony/tabela_Dziamyanchyk.html" target="obszar_glowny">
+<area shape="circle" coords="25,115,75,153" href="https://ptskiller.github.io/2k/podstrony/formulasz_Dziamyanchyk.html" target="obszar_glowny">
+<area shape="rect" coords="15,198,86,273" href="mailto:mkryniew@ids.gda.pl">
+<area shape="circle" coords="28,265,75,265" href="https://github.com/ptskiller/css" target="obszar_glowny">
 </map>
-<img src="mapa_Marek.png" alt="tutaj wybieraj linki" usemap="#mapa_Marek">
+<img src="../media/mapa_marek.png" alt="tutaj wybieraj linki" usemap="#mapa_Marek">
 		</body>
 	</html>
