--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                  </div>
 				
 				<div style="width: 25%; height: 500px; display:flex; float: left; "> 
-                     <iframe scrolling="no" width=40% height=60% name="prawe_menu" src="prawe_dziubich.html" border="0"> </iframe> 
+                     <iframe scrolling="no" width=40% height=60% name="prawe_menu" src="podstrony/right_menu.html" border="0"> </iframe> 
                 </div>
 				
 				<div style="clear:both; ">
