--- a/podstrony/right_menu.html
+++ b/podstrony/right_menu.html
@@ -6,11 +6,11 @@
 		</head>
 		<body>
 			<map id="mapa_Marek">
-<area shape="rect" coords="14,22,85,53" href="../media/logo_Marek.png">
+<area shape="rect" coords="14,22,85,53" href="../media/pepe2.gif">
 <area shape="poly" coords="25,111,52,66,71,111" href="https://ptskiller.github.io/2k/podstrony/tabela_Dziamyanchyk.html" target="obszar_glowny">
 <area shape="circle" coords="25,115,75,153" href="https://ptskiller.github.io/2k/podstrony/formulasz_Dziamyanchyk.html" target="obszar_glowny">
-<area shape="rect" coords="15,198,86,273" href="mailto:mkryniew@ids.gda.pl">
-<area shape="circle" coords="28,265,75,265" href="https://github.com/ptskiller/css" target="obszar_glowny">
+<area shape="rect" coords="20,200,80,225" href="mailto:mkryniew@ids.gda.pl">
+<area shape="circle" coords="28,265,75,265" href="https://ptskiller.github.io/sklepbizuteri/" target="obszar_glowny">
 </map>
 <img src="../media/mapa_marek.png" alt="tutaj wybieraj linki" usemap="#mapa_Marek">
 		</body>
